[package]
name = "latlong"
version = "0.1.3"
edition = "2024"
description = "Wrapper type for common coordinate systems"
keywords = ["Coordinates"]
license = "Apache-2.0 OR MIT"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
std = ["serde?/std"]
serde = ["dep:serde"]